--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "4.5.3",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.14",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
